01-Expose-the-Dashboard/service-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
spec:
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
